# sequence_search_hs

./: .gitignore  CHANGELOG.md  block_test.txt  sequence-search.cabal  words_en_2000.txt
app/: Main.hs
bench/: Bench.hs
src/: SequenceSearch.hs  SequenceSearchText.hs  SequenceSearchTrie.hs
test/: Spec.hs
