cabal-version:      3.0
name:               sequence-search
version:            0.0.0.1
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Jack
maintainer:         jackmurphy756@gmail.com
-- copyright:
category:           Text
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable sequence-search
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   app
    default-language: Haskell2010
