cabal-version:      3.0
name:               sequence-search
version:            0.0.0.1
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Jack
maintainer:         jackmurphy756@gmail.com
-- copyright:
category:           Text
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable sequence-search
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
          base ^>=4.16.4.0
        , sequence-search
    hs-source-dirs:   app
    default-language: Haskell2010

library
  exposed-modules:
      SequenceSearch
  hs-source-dirs:
      src
  default-extensions:
  build-depends:
      base ^>=4.16.4.0
    , extra ^>=1.7.13
  default-language: Haskell2010


test-suite sequence-search-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
  hs-source-dirs: test
  default-extensions:
  build-depends:
      base ^>=4.16.4.0
    , hspec
    , hspec-expectations
    , sequence-search
  default-language: Haskell2010
